src/main/java/syntactic/test/failing/declarationInMiddleOfMethod.ru
start {
    (IO.out_int(fib.sucesion_fib(n)));
    Var x = new x();
}